[New] Implemented MongoDB database (CrashDump table, table population based on uploaded files) [New] Implemented crash dumps list HTML page with href's to each crash dump report and META (online report generation)

--- a/server/config.json
+++ b/server/config.json
@@ -12,5 +12,8 @@
 	"clientLibTargetPath" : 	"clientLibUpload",
 	"clientLibTempPath" :   	"tmp_clientLibUpload",
 	"clientDumpTargetPath" :	"dumpUpload",
-	"clientDumpTempPath" :  	"tmp_dumpUpload"
+	"clientDumpTempPath" :  	"tmp_dumpUpload",
+
+	"db_connection_url" :		"mongodb://localhost/test",
+	"http_server_port" :		80
 }
