--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 .DS_Store
+*.swp
+*.lock
+profile
+*~.nib
+*xcuserdata/
+*.mode1v3
+*.mode2v3
+*.pbxuser
+*.xcworkspace
+*.moved-aside
+.svn
+.deps
