--- a/google-breakpad/src/common/mac/Breakpad.xcconfig
+++ b/google-breakpad/src/common/mac/Breakpad.xcconfig
@@ -28,10 +28,10 @@
 // OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 ARCHS = $(ARCHS_STANDARD_32_64_BIT)
-SDKROOT = macosx10.5
+SDKROOT = macosx
 
-GCC_VERSION = 4.2
-GCC_VERSION[sdk=macosx10.4][arch=*] = 4.0
+//GCC_VERSION = 4.2
+//GCC_VERSION[sdk=macosx10.4][arch=*] = 4.0
 
 GCC_C_LANGUAGE_STANDARD = c99
 
