--- a/server/config.json
+++ b/server/config.json
@@ -14,6 +14,8 @@
 	"clientDumpTargetPath" :	"dumpUpload",
 	"clientDumpTempPath" :  	"tmp_dumpUpload",
 
+	"enableClientLibUpload" : 	true,
+
 	"db_connection_url" :		"mongodb://localhost/test",
 	"http_server_port" :		80
 }
